Moved PlayerMovement and PlayerItems into PlayerController

--- a/ShoppingWars/Assembly-CSharp.csproj
+++ b/ShoppingWars/Assembly-CSharp.csproj
@@ -49,8 +49,7 @@
      <Compile Include="Assets\Scripts\Camera\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\Item\ItemFactory.cs" />
-     <Compile Include="Assets\Scripts\Player\PlayerItems.cs" />
-     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
