--- a/ShoppingWars/Assembly-CSharp-vs.csproj
+++ b/ShoppingWars/Assembly-CSharp-vs.csproj
@@ -49,8 +49,7 @@
      <Compile Include="Assets\Scripts\Camera\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\Item\ItemFactory.cs" />
-     <Compile Include="Assets\Scripts\Player\PlayerItems.cs" />
-     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
  <Reference Include="Assembly-UnityScript-firstpass">
  <HintPath>/Users/per/dev/ShoppingWars/ShoppingWars/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
